--- a/Craigslist-Used-Cars.ipynb
+++ b/Craigslist-Used-Cars.ipynb
@@ -270,6 +270,110 @@
    "source": [
     "data.head()"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "fd68cab1",
+   "metadata": {},
+   "source": [
+    "## EDA and Cleaning"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "300a83ee",
+   "metadata": {},
+   "source": [
+    "#### Detecting and removing outliers "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb0b5401",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "119800.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "np.quantile(data.price, 0.999)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c637acca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "nan"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "np.quantile(data.odometer, 0.99)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "274ee5a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = data[['id', 'region', 'price', 'year',\n",
+    "       'manufacturer', 'model', 'condition', 'cylinders', 'fuel', 'odometer',\n",
+    "       'title_status', 'transmission', 'drive', 'size', 'type',\n",
+    "       'paint_color', 'description', 'state', 'lat', 'long']]\n",
+    "data = data[data.price > 999]\n",
+    "data = data[data.price <=85000]\n",
+    "data = data[data.odometer <= 290098.7499999992]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c13382c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = data.dropna(axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a62bc2e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(81021, 20)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "data.shape"
+   ]
   }
  ],
  "metadata": {
