Define new price range column

--- a/Craigslist-Used-Cars.ipynb
+++ b/Craigslist-Used-Cars.ipynb
@@ -374,6 +374,217 @@
    "source": [
     "data.shape"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "3cbfe283",
+   "metadata": {},
+   "source": [
+    "## EDA and Cleaning"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "f32332ba",
+   "metadata": {},
+   "source": [
+    "#### Detecting and removing outliers "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f0d303a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "119800.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "np.quantile(data.price, 0.999)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5880ec95",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "nan"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "np.quantile(data.odometer, 0.99)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23ddf5cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = data[['id', 'region', 'price', 'year',\n",
+    "       'manufacturer', 'model', 'condition', 'cylinders', 'fuel', 'odometer',\n",
+    "       'title_status', 'transmission', 'drive', 'size', 'type',\n",
+    "       'paint_color', 'description', 'state', 'lat', 'long']]\n",
+    "data = data[data.price > 999]\n",
+    "data = data[data.price <=85000]\n",
+    "data = data[data.odometer <= 290098.7499999992]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c87274d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = data.dropna(axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "666862e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(81021, 20)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "data.shape"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "ce7169d0",
+   "metadata": {},
+   "source": [
+    "#### Re-define price column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01da1ac9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Create a column used to collect price range information\n",
+    "data['price_range'] = 0\n",
+    "\n",
+    "## Use 5000 as a baseline level to distribute each price range\n",
+    "data['price_range'] = rsm.ifelse(data.price >= 5000, 'above_5000', 'below_5000')\n",
+    "\n",
+    "data['price_range'] = rsm.ifelse(\n",
+    "    (data.price > 5000) & (data.price <= 10000), \n",
+    "    'above_5000 & below_10000', \n",
+    "    data['price_range']\n",
+    ")\n",
+    "\n",
+    "data['price_range'] = rsm.ifelse(\n",
+    "    (data.price > 10000) & (data.price <= 15000), \n",
+    "    'above_10000 & below_15000', \n",
+    "    data['price_range']\n",
+    ")\n",
+    "\n",
+    "data['price_range'] = rsm.ifelse(\n",
+    "    (data.price > 15000) & (data.price <= 20000), \n",
+    "    'above_15000 & below_20000', \n",
+    "    data['price_range']\n",
+    ")\n",
+    "\n",
+    "data['price_range'] = rsm.ifelse(\n",
+    "    (data.price > 20000) & (data.price <= 25000), \n",
+    "    'above_20000 & below_25000', \n",
+    "    data['price_range']\n",
+    ")\n",
+    "\n",
+    "data['price_range'] = rsm.ifelse(\n",
+    "    (data.price >25000) & (data.price <= 30000), \n",
+    "    'above_25000 & below_30000', \n",
+    "    data['price_range']\n",
+    ")\n",
+    "\n",
+    "data['price_range'] = rsm.ifelse(\n",
+    "    (data.price >30000) & (data.price <= 35000), \n",
+    "    'above_30000 & below_35000', \n",
+    "    data['price_range']\n",
+    ")\n",
+    "\n",
+    "data['price_range'] = rsm.ifelse(\n",
+    "    (data.price >35000) & (data.price <= 40000), \n",
+    "    'above_35000 & below_40000', \n",
+    "    data['price_range']\n",
+    ")\n",
+    "\n",
+    "data['price_range'] = rsm.ifelse(\n",
+    "    (data.price >40000) & (data.price <= 45000), \n",
+    "    'above_40000 & below_45000', \n",
+    "    data['price_range']\n",
+    ")\n",
+    "\n",
+    "data['price_range'] = rsm.ifelse(\n",
+    "    (data.price >45000) & (data.price <= 50000), \n",
+    "    'above_45000 & below_50000', \n",
+    "    data['price_range']\n",
+    ")\n",
+    "\n",
+    "data['price_range'] = rsm.ifelse(\n",
+    "    (data.price >50000) & (data.price <= 55000), \n",
+    "    'above_50000 & below_55000', \n",
+    "    data['price_range']\n",
+    ")\n",
+    "\n",
+    "data['price_range'] = rsm.ifelse(\n",
+    "    (data.price >55000) & (data.price <= 60000), \n",
+    "    'above_55000 & below_60000', \n",
+    "    data['price_range']\n",
+    ")\n",
+    "\n",
+    "data['price_range'] = rsm.ifelse(\n",
+    "    (data.price >60000) & (data.price <= 65000), \n",
+    "    'above_60000 & below_65000', \n",
+    "    data['price_range']\n",
+    ")\n",
+    "\n",
+    "data['price_range'] = rsm.ifelse(\n",
+    "    (data.price >65000) & (data.price <= 70000), \n",
+    "    'above_65000 & below_70000', \n",
+    "    data['price_range']\n",
+    ")\n",
+    "\n",
+    "data['price_range'] = rsm.ifelse(\n",
+    "    (data.price >70000), \n",
+    "    'above_70000 ', \n",
+    "    data['price_range']\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
