Preprocess data for TFIDF and Word2Vec models

--- a/Craigslist-Used-Cars.ipynb
+++ b/Craigslist-Used-Cars.ipynb
@@ -841,6 +841,118 @@
    "source": [
     "sns.violinplot(y=\"title_status\", x=\"price\", data=data)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "5fac1812",
+   "metadata": {},
+   "source": [
+    "## Preprocessing"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "dec91066",
+   "metadata": {},
+   "source": [
+    "#### Slice data frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1128edaa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = data.drop(['price','price_range'],axis = 1)\n",
+    "y = data['price_range']"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "c6b1f6a6",
+   "metadata": {},
+   "source": [
+    "#### Function Used for TF-IDF Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d165f82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ps = PorterStemmer() \n",
+    "stop = set(stopwords.words('english'))\n",
+    "\n",
+    "# define function that can tokenize and stem each headline\n",
+    "def pre_processing_by_nltk(doc, stemming = True):\n",
+    "    translator = str.maketrans(string.punctuation, ' ' * len(string.punctuation))\n",
+    "    sent_nopuncts = doc.translate(translator)\n",
+    "    # step 1: get sentences\n",
+    "    sentences = sent_tokenize(sent_nopuncts)\n",
+    "    # step 2: get tokens\n",
+    "    tokens = []\n",
+    "    for sent in sentences:\n",
+    "        words = word_tokenize(sent)\n",
+    "        # step 3 (optional): stemming\n",
+    "        if stemming:\n",
+    "            words = [ps.stem(word) for word in words]\n",
+    "        tokens += words\n",
+    "    return [w.lower() for w in tokens if w not in stop]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "28033945",
+   "metadata": {},
+   "source": [
+    "#### Function Used for Word2Vec Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00f94043",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define fucntion to generate tokens\n",
+    "stop = set(stopwords.words('english'))\n",
+    "ps = PorterStemmer() \n",
+    "def pre_pro_by_nltk(doc, stemming = False, need_sent = False):\n",
+    "   \n",
+    "    sentences = sent_tokenize(doc) #get sentence at first if there is a paragraph \n",
+    "    tokens = []\n",
+    "    \n",
+    "    for sent in sentences:\n",
+    "        words = word_tokenize(sent) #get words for each sentence\n",
+    "        if stemming:\n",
+    "            words = [ps.stem(word) for word in words]\n",
+    "        if need_sent:\n",
+    "            tokens.append(words)\n",
+    "        else:\n",
+    "            tokens += words\n",
+    "            \n",
+    "    return [w.lower() for w in tokens if w not in stop] # remove stop words \n",
+    "\n",
+    "\n",
+    "## Get score from w2c model\n",
+    "def doc2vec(doc, wv):\n",
+    "    vecs = []\n",
+    "    for token in doc:\n",
+    "        try:\n",
+    "            vecs.append(wv[token])\n",
+    "        except KeyError:\n",
+    "            pass\n",
+    "    return np.mean(vecs, axis=0)"
+   ]
   }
  ],
  "metadata": {
