Build baseline predictive Word2Vec model using description only

--- a/Craigslist-Used-Cars.ipynb
+++ b/Craigslist-Used-Cars.ipynb
@@ -917,41 +917,176 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "2f849533",
+   "metadata": {},
+   "source": [
+    "## Model Building and Tuning"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "c8e48a63",
+   "metadata": {},
+   "source": [
+    "### Baseline Model (Word2Vec) (Description only)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "039b0c04",
+   "metadata": {},
+   "source": [
+    "#### Create token"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00f94043",
+   "id": "0d49748b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define fucntion to generate tokens\n",
-    "stop = set(stopwords.words('english'))\n",
-    "ps = PorterStemmer() \n",
-    "def pre_pro_by_nltk(doc, stemming = False, need_sent = False):\n",
-    "   \n",
-    "    sentences = sent_tokenize(doc) #get sentence at first if there is a paragraph \n",
-    "    tokens = []\n",
-    "    \n",
-    "    for sent in sentences:\n",
-    "        words = word_tokenize(sent) #get words for each sentence\n",
-    "        if stemming:\n",
-    "            words = [ps.stem(word) for word in words]\n",
-    "        if need_sent:\n",
-    "            tokens.append(words)\n",
-    "        else:\n",
-    "            tokens += words\n",
-    "            \n",
-    "    return [w.lower() for w in tokens if w not in stop] # remove stop words \n",
-    "\n",
-    "\n",
-    "## Get score from w2c model\n",
-    "def doc2vec(doc, wv):\n",
-    "    vecs = []\n",
-    "    for token in doc:\n",
-    "        try:\n",
-    "            vecs.append(wv[token])\n",
-    "        except KeyError:\n",
-    "            pass\n",
-    "    return np.mean(vecs, axis=0)"
+    "# Use tokens to train our Word2Vec Model\n",
+    "token_w2v = X['description'].apply(pre_pro_by_nltk)\n",
+    "w2v_model = Word2Vec(token_w2v,\n",
+    "                     min_count=3,\n",
+    "                        window=5,\n",
+    "                         size=100,\n",
+    "                         alpha=0.1, \n",
+    "                         min_alpha=0.1, \n",
+    "                         negative=20)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "725a4ffb",
+   "metadata": {},
+   "source": [
+    "#### Create Vector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "380da6c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-45-89860c3a8cb0>:26: DeprecationWarning: Call to deprecated `__getitem__` (Method will be removed in 4.0.0, use self.wv.__getitem__() instead).\n",
+      "  vecs.append(wv[token])\n",
+      "/usr/local/lib/python3.8/dist-packages/numpy/core/fromnumeric.py:3372: RuntimeWarning: Mean of empty slice.\n",
+      "  return _methods._mean(a, axis=axis, dtype=dtype,\n",
+      "/usr/local/lib/python3.8/dist-packages/numpy/core/_methods.py:170: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  ret = ret.dtype.type(ret / rcount)\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_w2v = []\n",
+    "for doc in token_w2v:\n",
+    "    if np.isnan(doc2vec(doc, w2v_model)).any():\n",
+    "        alt = np.random.uniform(-0.25, 0.25, w2v_model.vector_size)\n",
+    "        X_w2v.append(alt)\n",
+    "    else:\n",
+    "        X_w2v.append(doc2vec(doc, w2v_model))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "75e03b72",
+   "metadata": {},
+   "source": [
+    "#### Split data set to train, vali and test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f9d665d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X_w2v, y, random_state=42, test_size=0.3, shuffle = True)\n",
+    "X_vali, X_test, y_vali, y_test = train_test_split(X_test, y_test, random_state=42, test_size=0.5, shuffle = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d04dfbd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf_w2c = LogisticRegression(max_iter=100000000, random_state = 0).fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e751f65",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.40195836418991193"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "clf_w2c.score(X_vali, y_vali)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5c54cbc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.40422906039164064"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "clf_w2c.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d4a5184",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.40422906039164064"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "f1_score(y_test, clf_w2c.predict(X_test), average = 'micro')"
    ]
   }
  ],
