Build baseline predictive TF-IDF model using description only

--- a/Craigslist-Used-Cars.ipynb
+++ b/Craigslist-Used-Cars.ipynb
@@ -1088,6 +1088,123 @@
    "source": [
     "f1_score(y_test, clf_w2c.predict(X_test), average = 'micro')"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "040a4083",
+   "metadata": {},
+   "source": [
+    "### Baseline Model (TF-IDF) (Description Only)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7805fc28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create tf-idf vectors for dataset\n",
+    "tfidf = TfidfVectorizer(strip_accents=None,\n",
+    "                        lowercase=True,\n",
+    "                        preprocessor=None,  # applied preprocessor in Data Cleaning\n",
+    "                        tokenizer=pre_processing_by_nltk,\n",
+    "                        use_idf=True,\n",
+    "                        norm='l2',\n",
+    "                        smooth_idf=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0dfac8b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_tfidf = tfidf.fit_transform(X['description'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7786365a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X_tfidf, y, random_state=42, test_size=0.3, shuffle=True)\n",
+    "X_vali, X_test, y_vali, y_test = train_test_split(X_test, y_test, random_state=42, test_size=0.5, shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9626a955",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf_base = LogisticRegression(random_state=0, max_iter = 10000).fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1f3960b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6061054883567843"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "clf_base.score(X_vali, y_vali) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7c90061",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6090998848115846"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "clf_base.score(X_test, y_test) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a13aa1b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6090998848115846"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "f1_score(y_test, clf_base.predict(X_test), average = 'micro')"
+   ]
   }
  ],
  "metadata": {
