Build TF-IDF model using description, model, manufacturer, and year

--- a/Craigslist-Used-Cars.ipynb
+++ b/Craigslist-Used-Cars.ipynb
@@ -1205,6 +1205,119 @@
    "source": [
     "f1_score(y_test, clf_base.predict(X_test), average = 'micro')"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "e2edcf4c",
+   "metadata": {},
+   "source": [
+    "### Model 2 (Description + Car Model + Manufacturer + Car Year)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20641a43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_desc = X_tfidf\n",
+    "X_model = tfidf.fit_transform(X['model'])\n",
+    "X_manu = tfidf.fit_transform(X['manufacturer'])\n",
+    "X_year = tfidf.fit_transform(X['year'].astype(str))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b43b2e49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X2 = sp.hstack((X_tfidf,X_model,X_manu,X_year))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d35fa65d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X2, y, random_state=42, test_size=0.3, shuffle=True)\n",
+    "X_vali, X_test, y_vali, y_test = train_test_split(X_test, y_test, random_state=42, test_size=0.5, shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8d9239f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf_2 = LogisticRegression(random_state=0, max_iter = 10000).fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "664532ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6790092981156916"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "clf_2.score(X_vali, y_vali) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d27895e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6824090834293237"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "clf_2.score(X_test, y_test) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07d0a2a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6824090834293237"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "f1_score(y_test, clf_2.predict(X_test), average = 'micro')"
+   ]
   }
  ],
  "metadata": {
