Build TF-IDF model using decription + 9 variables

--- a/Craigslist-Used-Cars.ipynb
+++ b/Craigslist-Used-Cars.ipynb
@@ -1318,6 +1318,121 @@
    "source": [
     "f1_score(y_test, clf_2.predict(X_test), average = 'micro')"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "d5deaada",
+   "metadata": {},
+   "source": [
+    "### Model 3 (Description + Car Model + Manufacturer + Car Year + Cylinder + Fuel + Transmission + Drive + Size + Type)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77b62dc2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_cyl = tfidf.fit_transform(X['cylinders'])\n",
+    "X_fuel = tfidf.fit_transform(X['fuel'])\n",
+    "X_trans = tfidf.fit_transform(X['transmission'])\n",
+    "X_drive = tfidf.fit_transform(X['drive'])\n",
+    "X_size = tfidf.fit_transform(X['size'])\n",
+    "X_type = tfidf.fit_transform(X['type'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3d827f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X3 = sp.hstack((X_tfidf,X_model,X_manu,X_year,X_cyl,X_fuel,X_trans,X_drive,X_size,X_type))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "206f844c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X3, y, random_state=42, test_size=0.3, shuffle=True)\n",
+    "X_vali, X_test, y_vali, y_test = train_test_split(X_test, y_test, random_state=42, test_size=0.5, shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6965c0f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf_3 = LogisticRegression(random_state=0, max_iter = 10000).fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c78279d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.685674319098165"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "clf_3.score(X_vali, y_vali) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8bb2aac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6911304920190884"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "clf_3.score(X_test, y_test) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37289160",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6911304920190884"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "f1_score(y_test, clf_3.predict(X_test), average = 'micro')"
+   ]
   }
  ],
  "metadata": {
