Build TF-IDF model using all variables

--- a/Craigslist-Used-Cars.ipynb
+++ b/Craigslist-Used-Cars.ipynb
@@ -1433,6 +1433,118 @@
    "source": [
     "f1_score(y_test, clf_3.predict(X_test), average = 'micro')"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "ec9d25c8",
+   "metadata": {},
+   "source": [
+    "### Model 4 (All Variables)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c52cf8f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_state = tfidf.fit_transform(X['state'])\n",
+    "X_title = tfidf.fit_transform(X['title_status'])\n",
+    "X_odo = tfidf.fit_transform(X['odometer'].astype(str))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3be32da5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X4 = sp.hstack((X_tfidf,X_model,X_manu,X_year,X_cyl,X_fuel,X_trans,X_drive,X_size,X_type,X_state,X_title,X_odo))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a22b8bbc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X4, y, random_state=42, test_size=0.3, shuffle=True)\n",
+    "X_vali, X_test, y_vali, y_test = train_test_split(X_test, y_test, random_state=42, test_size=0.5, shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea295126",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf_4 = LogisticRegression(random_state=0, max_iter = 10000).fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ef110dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7221262239776187"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "clf_4.score(X_vali, y_vali) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e512cfe5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7240414678295212"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "clf_4.score(X_test, y_test) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b776ec7e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7240414678295212"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "f1_score(y_test, clf_4.predict(X_test), average = 'micro')"
+   ]
   }
  ],
  "metadata": {
