Build TF-IDF model using all variables minus description

--- a/Craigslist-Used-Cars.ipynb
+++ b/Craigslist-Used-Cars.ipynb
@@ -1545,6 +1545,106 @@
    "source": [
     "f1_score(y_test, clf_4.predict(X_test), average = 'micro')"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "df18103b",
+   "metadata": {},
+   "source": [
+    "### Model 5 (All Variables - Description)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "251cd447",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X5 = sp.hstack((X_model,X_manu,X_year,X_cyl,X_fuel,X_trans,X_drive,X_size,X_type,X_state,X_title,X_odo))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58606bf5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X5, y, random_state=42, test_size=0.3, shuffle=True)\n",
+    "X_vali, X_test, y_vali, y_test = train_test_split(X_test, y_test, random_state=42, test_size=0.5, shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "599fd843",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf_5 = LogisticRegression(random_state=0, max_iter = 10000).fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "add0c9d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6627993088126388"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "clf_5.score(X_vali, y_vali) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "037ec973",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6652130985683725"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "clf_5.score(X_test, y_test) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df7b6e7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6652130985683725"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "f1_score(y_test, clf_5.predict(X_test), average = 'micro')"
+   ]
   }
  ],
  "metadata": {
